Update CONTRIBUTING_GUIDE.md
Signed-off-by: KamiWan <kaiming.wan@automq.com>